--- a/JW_CV.qmd
+++ b/JW_CV.qmd
@@ -65,13 +65,13 @@ Undersköterska \hfill Aug. 2016 - Maj 2021
 
 # Pedagogiska meriter
 
-Nominering för pedagogiskt pris
+Nominering för pedagogiskt pris, Karolinska Institutet - Danderyds Sjukhus
 
 * 19 Januari 2024
 * 13 Januari 2023
 
 \
-Lärare i katastrofmedicinsk simulering \hfill 10 Jan -23
+Lärare i katastrofmedicinsk simulering, Karolinska institutet \hfill 10 Jan -23
 
 \
 Amanuens - Trombos och Hemostas \hfill Okt. 2020 - Jan. 2021
@@ -79,7 +79,7 @@ Amanuens - Trombos och Hemostas \hfill Okt. 2020 - Jan. 2021
 Kursamanuens för studentvald kurs på läkarprogrammet på Karolinska institutet för studenter termin 6
 
 \
-Studentsällskapet för Kirurgi och Anestesi \hfill Sep. 2019 - Sep. 2021
+Studentsällskapet för Kirurgi och Anestesi på Karolinska Institutet \hfill Sep. 2019 - Sep. 2021
 
 Styrelseledamot och amanuens i praktiska övningar
 
