--- a/JW_CV.qmd
+++ b/JW_CV.qmd
@@ -66,13 +66,16 @@ Undersköterska \hfill Aug. 2016 - Maj 2021
 
 # Pedagogiska meriter
 
+Amanuens i larmsimulering för termin 10 läkarstudenter \hfill 23 Maj 2024
+
+\
 Nominering för pedagogiskt pris, Karolinska Institutet - Danderyds Sjukhus
 
 * 19 Januari 2024
 * 13 Januari 2023
 
 \
-Lärare i katastrofmedicinsk simulering, Karolinska institutet \hfill 10 Jan -23
+Lärare i katastrofmedicinsk simulering, Karolinska institutet \hfill 10 Jan 2023
 
 \
 Amanuens - Trombos och Hemostas \hfill Okt. 2020 - Jan. 2021
